config/samples/bootstrap-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tart-bootstrap-sample
  namespace: cluster-api-provider-tart-system
spec:
  parentRefs:
  - name: sample-gateway
    namespace: gateway-system
  hostnames:
  - bootstrap.sample.walnuts.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ipxe
    backendRefs:
    - name: controller-manager-ipxe
      namespace: cluster-api-provider-tart-system
      port: 8082
  - matches:
    - path:
        type: PathPrefix
        value: /metadata
    backendRefs:
    - name: controller-manager-ipxe
      namespace: cluster-api-provider-tart-system
      port: 8082
