config/samples/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cluster-api-provider-tart-controller-manager-ipxe
  namespace: tart-infrastructure-system
spec:
  parentRefs:
  - name: sample-gateway
    namespace: gateway-system
  hostnames:
  - tart.sample.walnuts.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cluster-api-provider-tart-controller-manager-ipxe
      namespace: tart-infrastructure-system
      port: 8082
